creat index.html

--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <html>
 <head></head>
 <body>
-	
-
-<h1>段伟的博客</h1>
+<div>
+	<ul>
+		<li><a><img src="img/1.jpg"/></a></li>
+		<li><a><img src="img/2.jpg"/></a></li>
+		<li><a><img src="img/3.jpg"/></a></li>
+		<li><a><img src="img/4.jpg"/></a></li>
+	</ul>
+</div>
 
 </body>
 <html>
