--- a/index4.html
+++ b/index4.html
@@ -16,6 +16,7 @@
     <meta itemprop="image" content="">
     <title>温馨情侣相册</title>
     <link rel="shortcut icon" href="/apps/widget/common/img/favicon_fbd8366.ico" type="image/x-icon">
+    	<script type="text/javascript" src="js/jquery-2.2.2.min.js" ></script>
     <script type="text/javascript" src="js/touch.js" ></script>
     <script>(function() {
 	! function() {
@@ -10453,11 +10454,11 @@ body {
 		});
 
 		function left() {
-			location.href = "index4.html";
+			location.href = "index5.html";
 		}
 
 		function right() {
-			location.href = "index4.html";
+			location.href = "index5.html";
 		}
 
 		function up() {
